# laravel-logs-inspector

./: .gitignore  Cargo.toml  README.md
src/: app.rs  log_file_parser.rs  log_file_watcher.rs  main.rs  ui.rs
