[package]
name = "laravel-logs-inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8.2.0"
ratatui = "0.29.0"
regex = "1.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
opt-level = 3         # Default for release; highest level of speed optimization
lto = "fat"           # Perform heavy Link-Time Optimization across all crates
codegen-units = 1     # Compile everything as one unit; slower build, faster code
panic = "abort"       # Removes unwinding logic, allowing better compiler optimizations
